# rust-whiteaboard

./: Cargo.toml
egui-wgpu/: Cargo.toml
src/: main.rs  shader.wgsl  ui.rs
src/shaders/: fragment.wgsl  shader.wgsl  shape.wgsl
