[package]
name = "rust-wgpu-gui-example"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.3"
bytemuck = { version = "1.19.0", features = ["derive"] }
glyphon = { git = "https://github.com/mehrbod2002/glyphon", branch="egui-wgpu", features=["egui"] }
egui = "0.29.1"
egui-wgpu = "0.29.1"
lazy_static = "1.5.0"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
image = { version = "0.25.5", features = ["png", "jpeg"] }
tao = "0.31.0"
wry = "0.47.2"
tokio = { version = "1.42.0", features = ["full"] }

[profile.dev]
opt-level=0
lto=false

[profile.release]
opt-level=0
lto=false
