[package]
name = "rust-whiteboard"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.3"
bytemuck = { version = "1.19.0", features = ["derive"] }
egui = "0.30.0"
egui-wgpu = "0.30.0"
lazy_static = "1.5.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
image = { version = "0.25.5", features = ["png", "jpeg"] }
tao = "0.31.0"
wry = "0.47.2"
tokio = { version = "1.42.0", features = ["full"] }
wgpu = "23.0.0"
glyphon = "0.7.0"

[profile.dev]
opt-level=0
lto=false

[profile.release]
opt-level=0
lto=false
